apps/grafana/ingressroute.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  labels:
    app.kubernetes.io/name: grafana
  annotations:
    gethomepage.dev/href: "https://grafana.trusted.nirmalhk7.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: grafana
    gethomepage.dev/app: grafana # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Grafana
    gethomepage.dev/widget.type: "grafana"
    gethomepage.dev/widget.url: "https://grafana.trusted.nirmalhk7.com"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=grafana"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`grafana.trusted.nirmalhk7.com`)
      kind: Rule
      services:
        - name: main-grafana
          port: 80
      middlewares:
        - name: mgd-monitoring-ratelimit
        - name: mgd-monitoring-https
        - name: mgd-monitoring-headervalidation
  tls:
    secretName: grafana-tls
